<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/txt_RP_Description"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/rp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_userDescprition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/username_row"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_RP_Description" />

    <TextView
        android:id="@+id/txt_properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_properties_description"
        app:layout_constraintTop_toBottomOf="@+id/txt_username_row"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_properties_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/properties"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_userDescprition" />

    <TextView
        android:id="@+id/txt_rpID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/webauthn_io"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txt_RP_Description"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_username_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/johndoe"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_userDescprition"
        app:layout_constraintTop_toBottomOf="@+id/txt_RP_Description"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_deleteKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/txt_username_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_rpID" />
</androidx.constraintlayout.widget.ConstraintLayout>